--- a/osetejupyter_100_cross_validation_2.ipynb
+++ b/osetejupyter_100_cross_validation_2.ipynb
@@ -694,6 +694,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ViTModel(\n",
+       "  (embeddings): ViTEmbeddings(\n",
+       "    (patch_embeddings): ViTPatchEmbeddings(\n",
+       "      (projection): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
+       "    )\n",
+       "    (dropout): Dropout(p=0.0, inplace=False)\n",
+       "  )\n",
+       "  (encoder): ViTEncoder(\n",
+       "    (layer): ModuleList(\n",
+       "      (0-11): 12 x ViTLayer(\n",
+       "        (attention): ViTSdpaAttention(\n",
+       "          (attention): ViTSdpaSelfAttention(\n",
+       "            (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          )\n",
+       "          (output): ViTSelfOutput(\n",
+       "            (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          )\n",
+       "        )\n",
+       "        (intermediate): ViTIntermediate(\n",
+       "          (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "          (intermediate_act_fn): GELUActivation()\n",
+       "        )\n",
+       "        (output): ViTOutput(\n",
+       "          (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "          (dropout): Dropout(p=0.0, inplace=False)\n",
+       "        )\n",
+       "        (layernorm_before): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        (layernorm_after): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (layernorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "  (pooler): ViTPooler(\n",
+       "    (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "    (activation): Tanh()\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "load_vit()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
